--- a/.github/workflows/pvekernel.yml
+++ b/.github/workflows/pvekernel.yml
@@ -27,18 +27,17 @@ jobs:
         DEBIAN_FRONTEND: noninteractive
       run: |
         git pull
-        sudo -E rm -rf /swapfile /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
-        sudo -E wget http://download.proxmox.com/debian/proxmox-release-bullseye.gpg -O /etc/apt/trusted.gpg.d/proxmox-release-bullseye.gpg
-        sudo -E chmod +r /etc/apt/trusted.gpg.d/proxmox-release-bullseye.gpg
-        sudo -E apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 648ACFD622F3D138
-        sudo -E chmod a+w /etc/apt/sources.list
-        sudo -E echo "deb http://download.proxmox.com/debian/pve bullseye pve-no-subscription" >>/etc/apt/sources.list
-        sudo -E echo "deb http://download.proxmox.com/debian/pmg bullseye pmg-no-subscription" >>/etc/apt/sources.list
-        sudo -E echo "deb http://deb.debian.org/debian bullseye main" >>/etc/apt/sources.list
-        sudo -E apt-get update
-        sudo -E apt-get install git nano screen patch fakeroot build-essential devscripts libncurses5 libncurses5-dev libssl-dev bc flex bison libelf-dev libaudit-dev libgtk2.0-dev libperl-dev asciidoc xmlto gnupg gnupg2 rsync lintian debhelper libdw-dev libnuma-dev libslang2-dev sphinx-common asciidoc-base automake cpio dh-python file gcc kmod libiberty-dev libtool python3-minimal sed tar zlib1g-dev liblz4-tool idn zstd libpve-common-perl systemtap-sdt-dev libcap-dev libzstd-dev libbabeltrace-dev libunwind-dev python3-dev binutils-dev dwarves
-        sudo -E apt-get autoremove --purge
-        sudo -E apt-get clean
+        rm -rf /swapfile /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        wget http://download.proxmox.com/debian/proxmox-release-bookworm.gpg -O /etc/apt/trusted.gpg.d/proxmox-release-bookworm.gpg
+        chmod +r /etc/apt/trusted.gpg.d/proxmox-release-bookworm.gpg
+        apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 648ACFD622F3D138
+        chmod a+w /etc/apt/sources.list
+        echo "deb http://download.proxmox.com/debian/pve bookworm pve-no-subscription" >>/etc/apt/sources.list
+        echo "deb http://deb.debian.org/debian bookworm main" >>/etc/apt/sources.list
+        apt-get update
+        apt-get install git nano screen patch fakeroot build-essential devscripts libncurses5 libncurses5-dev libssl-dev bc flex bison libelf-dev libaudit-dev libgtk2.0-dev libperl-dev asciidoc xmlto gnupg gnupg2 rsync lintian debhelper libdw-dev libnuma-dev libslang2-dev sphinx-common asciidoc-base automake cpio dh-python file gcc kmod libiberty-dev libtool python3-minimal sed tar zlib1g-dev liblz4-tool idn zstd libpve-common-perl systemtap-sdt-dev libcap-dev libzstd-dev libtraceevent-dev libunwind-dev python3-dev binutils-dev dwarves python3-setuptools libpfm4-dev
+        apt-get autoremove --purge
+        apt-get clean
     
     - name: 下载固件源码和软件包
       run: |
@@ -48,7 +47,7 @@ jobs:
       run: |
         cd pve-kernel
         sed -i "s/106 @@/105 @@/g" patches/kernel/0003-pci-Enable-overrides-for-missing-ACS-capabilities-4..patch
-        sed -i "/pci_find_ext_capability(dev, PCI_EXT_CAP_ID_ACS))/d" patches/kernel/0003-pci-Enable-overrides-for-missing-ACS-capabilities-4..patch
+        sed -i "/pci_find_ext_capability(dev, PCI_EXT_CAP_ID_ACS))/d" patches/kernel/0004-pci-Enable-overrides-for-missing-ACS-capabilities-4..patch
         sed -i "s/(dev) ||/(dev))/g" patches/kernel/0003-pci-Enable-overrides-for-missing-ACS-capabilities-4..patch
         sed -i 's/${LINUX_TOOLS_DBG_DEB}//' Makefile
         sed -i "s/rules fwcheck abicheck/rules abicheck/" debian/rules
