--- a/.github/workflows/pve.yml
+++ b/.github/workflows/pve.yml
@@ -1,22 +1,21 @@
-name: 编译PVE内核
+name: 编译PVE
 
 on: 
-  release:
-    types: [published]
+  repository_dispatch:
+  workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: true
+        default: 'true'
 
-  #push:
-  #  branches: 
-  #    - master
-
-  schedule:
-    - cron: 1 0 * * 6
-  
-  watch:
-    types: [started]
 jobs:
   build:
-    runs-on: ubuntu-latest
-    if: github.event.repository.owner.id == github.event.sender.id
+    runs-on: ubuntu-20.04
+
+    steps:
+    - name: 准备开始
+      uses: actions/checkout@main
 
     steps:
     - name: Checkout
