--- a/.github/workflows/pve.yml
+++ b/.github/workflows/pve.yml
@@ -11,15 +11,13 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+    
 
     steps:
     - name: 准备开始
       uses: actions/checkout@main
 
-    steps:
-    - name: Checkout
-      uses: actions/checkout@main
     
     - name: Initialization environment
       env:
