--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -1,48 +1,48 @@
-name: 编译openwrt固件
+name: 编译openwrt固件(测试)
 
 on: 
-  release:
-    types: [published]
-
-  #push:
-  #  branches: 
-  #    - master
-
-  schedule:
-    - cron:  1 0 * * 6
-  
-  watch:
-    types: [started]
-    
-
+  repository_dispatch:
+  workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: true
+        default: 'true'
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
     - name: 准备开始
       uses: actions/checkout@main
 
+      
     - name: 安装系统依赖
       env:
         DEBIAN_FRONTEND: noninteractive
       run: |
-        sudo apt update -y
-        sudo apt full-upgrade -y
-        sudo apt install -y ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp nano ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pip qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc /opt/hostedtoolcache/CodeQL
+        sudo docker image prune --all --force
+        sudo -E apt-get -qq update
+        sudo -E apt-get -qq install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp ninja-build p7zip p7zip-full patch pkgconf python2.7 python3 python3-pyelftools python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+        sudo -E apt-get -qq autoremove --purge
+        sudo -E apt-get -qq clean
+        sudo timedatectl set-timezone "$TZ"
+        sudo mkdir -p /workdir
+        sudo chown $USER:$GROUPS /workdir
+
 
     - name: 下载固件源码和软件包
       run: |
-        # 下载固件源码
         git clone https://github.com/coolsnowwolf/lede
-
+        
     - name: 更新和安装软件包
       run: |
         cd lede
         ./scripts/feeds update -a
         ./scripts/feeds install -a
         ./scripts/feeds install -a
-        
+
     - name: 常用配置修改
       run: |
         cd lede
@@ -53,8 +53,7 @@ jobs:
         rm -rf ./feeds/luci/applications/luci-app-dockerman
         rm -rf ./feeds/luci/applications/luci-app-unblockmusic
         rm -rf ./feeds/luci/applications/luci-app-ipsec-vpnd
-        git clone https://github.com/zjt37/zheng package/zheng/theme
-        svn co https://github.com/vernesong/OpenClash/trunk/luci-app-openclash package/zheng/luci-app-openclash
+        git clone https://github.com/gd0772/package package/zheng
         git clone https://github.com/fw876/helloworld package/zheng/ssrplus
         git clone https://github.com/xiaorouji/openwrt-passwall package/zheng/passwall && git clone -b luci https://github.com/xiaorouji/openwrt-passwall && mv openwrt-passwall/luci-app-passwall package/zheng/passwall && rm -rf openwrt-passwall
         git clone https://github.com/pymumu/luci-app-smartdns.git -b lede ./package/zheng/luci-app-smartdns
@@ -62,7 +61,6 @@ jobs:
         svn export https://github.com/kiddin9/openwrt-packages/trunk/luci-app-adguardhome package/zheng/luci-app-adguardhome
         sed -i "s/bootstrap/atmaterial/g" feeds/luci/collections/luci/Makefile
         rm -rf ./feeds/freifunk/themes
-        rm -rf ./feeds/luci/themes/luci-theme-bootstrap
         rm -rf ./feeds/luci/themes/luci-theme-argon
         rm -rf ./feeds/luci/themes/luci-theme-netgear
         rm -rf ./feeds/luci/themes/luci-theme-material
@@ -71,213 +69,38 @@ jobs:
         sed -i "s/192.168.1.1/192.168.2.3/g" package/base-files/files/bin/config_generate
         sed -i 's/\"services\"/\"nas\"/g' feeds/luci/applications/luci-app-samba4/luasrc/controller/samba4.lua
         sed -i 's/TTYD 终端/命令行/g' feeds/luci/applications/luci-app-ttyd/po/zh-cn/terminal.po
-        sed -i 's/ShadowSocksR Plus+/SSR Plus+/g' package/zheng/ssrplus/luci-app-ssr-plus/luasrc/controller/shadowsocksr.lua
+        sed -i 's/ShadowSocksR Plus+/SSR Plus+/g' package/zheng/ssrplus/luci-app-ssr-plus/luasrc/controller/shadowsocksr.luased -i 's/ShadowSocksR Plus+/SSR Plus+/g' package/zheng/ssrplus/luci-app-ssr-plus/luasrc/controller/shadowsocksr.lua
         sed -i 's/Turbo ACC 网络加速/网络加速/g' feeds/luci/applications/luci-app-turboacc/po/zh-cn/turboacc.po
-        
 
-    - name: 配置固件文件
-      run: |
-        cd lede
-        rm -f ./.config*
-        touch ./.config
-        cat >> .config <<EOF
-        CONFIG_TARGET_x86=y
-        CONFIG_TARGET_x86_64=y
-        CONFIG_TARGET_x86_64_DEVICE_generic=y
-        # CONFIG_GRUB_CONSOLE is not set
-        # CONFIG_GRUB_EFI_IMAGES is not set
-        CONFIG_GRUB_IMAGES=y
-        CONFIG_PACKAGE_bash=y
-        # CONFIG_PACKAGE_blkid is not set
-        CONFIG_PACKAGE_boost=y
-        CONFIG_PACKAGE_boost-date_time=y
-        CONFIG_PACKAGE_boost-program_options=y
-        CONFIG_PACKAGE_boost-system=y
-        CONFIG_PACKAGE_brook=y
-        CONFIG_PACKAGE_chinadns-ng=y
-        CONFIG_PACKAGE_coreutils-nohup=y
-        # CONFIG_PACKAGE_etherwake is not set
-        # CONFIG_PACKAGE_grub2-efi is not set
-        CONFIG_PACKAGE_haproxy=y
-        CONFIG_PACKAGE_https-dns-proxy=m
-        CONFIG_PACKAGE_hysteria=y
-        CONFIG_PACKAGE_ipt2socks=y
-        CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
-        CONFIG_PACKAGE_iptables-mod-iprange=y
-        CONFIG_PACKAGE_iptables-mod-socket=y
-        CONFIG_PACKAGE_kcptun-client=y
-        CONFIG_PACKAGE_kcptun-config=y
-        # CONFIG_PACKAGE_kmod-crypto-kpp is not set
-        CONFIG_PACKAGE_kmod-inet-diag=y
-        CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
-        CONFIG_PACKAGE_kmod-ipt-iprange=y
-        CONFIG_PACKAGE_kmod-ipt-socket=y
-        # CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
-        CONFIG_PACKAGE_kmod-nf-log6=y
-        CONFIG_PACKAGE_kmod-nf-reject6=y
-        CONFIG_PACKAGE_kmod-nf-socket=y
-        CONFIG_PACKAGE_kmod-nft-core=y
-        CONFIG_PACKAGE_kmod-nft-nat=y
-        CONFIG_PACKAGE_kmod-nft-socket=y
-        CONFIG_PACKAGE_kmod-nft-tproxy=y
-        # CONFIG_PACKAGE_kmod-wireguard is not set
-        CONFIG_PACKAGE_libcap-bin=y
-        CONFIG_PACKAGE_libcap-bin-capsh-shell="/bin/sh"
-        CONFIG_PACKAGE_libevent2=y
-        CONFIG_PACKAGE_libltdl=y
-        CONFIG_PACKAGE_liblua5.3=y
-        # CONFIG_PACKAGE_libminiupnpc is not set
-        # CONFIG_PACKAGE_libnatpmp is not set
-        # CONFIG_PACKAGE_libparted is not set
-        CONFIG_PACKAGE_libruby=y
-        CONFIG_PACKAGE_libyaml=y
-        # CONFIG_PACKAGE_luci-app-accesscontrol is not set
-        # CONFIG_PACKAGE_luci-app-adbyby-plus is not set
-        CONFIG_PACKAGE_luci-app-adguardhome=y
-        # CONFIG_PACKAGE_luci-app-adguardhome_INCLUDE_binary is not set
-        # CONFIG_PACKAGE_luci-app-arpbind is not set
-        # CONFIG_PACKAGE_luci-app-autoreboot is not set
-        # CONFIG_PACKAGE_luci-app-ddns is not set
-        # CONFIG_PACKAGE_luci-app-diskman is not set
-        # CONFIG_PACKAGE_luci-app-filetransfer is not set
-        CONFIG_PACKAGE_luci-app-https-dns-proxy=m
-        CONFIG_PACKAGE_luci-app-netdata=y
-        # CONFIG_PACKAGE_luci-app-nlbwmon is not set
-        CONFIG_PACKAGE_luci-app-openclash=y
-        CONFIG_PACKAGE_luci-app-passwall=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Haproxy=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Client=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Client=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Libev_Server=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Client=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Simple_Obfs=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_Plus=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray=y
-        CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
-        CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
-        CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy=y
-        # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-ng is not set
-        # CONFIG_PACKAGE_luci-app-rclone_INCLUDE_rclone-webui is not set
-        CONFIG_PACKAGE_luci-app-smartdns=y
-        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
-        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
-        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
-        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
-        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadowsocks_V2ray_Plugin=y
-        CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
-        # CONFIG_PACKAGE_luci-app-upnp is not set
-        # CONFIG_PACKAGE_luci-app-vlmcsd is not set
-        # CONFIG_PACKAGE_luci-app-vsftpd is not set
-        # CONFIG_PACKAGE_luci-app-wireguard is not set
-        # CONFIG_PACKAGE_luci-app-wol is not set
-        # CONFIG_PACKAGE_luci-app-xlnetacc is not set
-        # CONFIG_PACKAGE_luci-app-zerotier is not set
-        CONFIG_PACKAGE_luci-compat=y
-        CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
-        CONFIG_PACKAGE_luci-i18n-https-dns-proxy-zh-cn=m
-        CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
-        CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
-        CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
-        # CONFIG_PACKAGE_luci-lib-fs is not set
-        # CONFIG_PACKAGE_luci-proto-wireguard is not set
-        # CONFIG_PACKAGE_miniupnpd is not set
-        CONFIG_PACKAGE_naiveproxy=y
-        CONFIG_PACKAGE_netdata=y
-        # CONFIG_PACKAGE_nlbwmon is not set
-        # CONFIG_PACKAGE_parted is not set
-        CONFIG_PACKAGE_redsocks2=y
-        CONFIG_PACKAGE_ruby=y
-        CONFIG_PACKAGE_ruby-bigdecimal=y
-        CONFIG_PACKAGE_ruby-date=y
-        CONFIG_PACKAGE_ruby-digest=y
-        CONFIG_PACKAGE_ruby-enc=y
-        CONFIG_PACKAGE_ruby-forwardable=y
-        CONFIG_PACKAGE_ruby-pstore=y
-        CONFIG_PACKAGE_ruby-psych=y
-        CONFIG_PACKAGE_ruby-stringio=y
-        CONFIG_PACKAGE_ruby-strscan=y
-        CONFIG_PACKAGE_ruby-yaml=y
-        CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
-        CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
-        CONFIG_PACKAGE_smartdns=y
-        # CONFIG_PACKAGE_smartmontools is not set
-        CONFIG_PACKAGE_trojan=y
-        CONFIG_PACKAGE_trojan-plus=y
-        CONFIG_PACKAGE_unzip=y
-        CONFIG_PACKAGE_v2ray-core=y
-        CONFIG_PACKAGE_v2ray-plugin=y
-        # CONFIG_PACKAGE_vlmcsd is not set
-        # CONFIG_PACKAGE_vsftpd-alt is not set
-        # CONFIG_PACKAGE_wireguard-tools is not set
-        # CONFIG_PACKAGE_wol is not set
-        CONFIG_PACKAGE_xray-plugin=y
-        # CONFIG_PACKAGE_zerotier is not set
-        # CONFIG_TARGET_IMAGES_GZIP is not set
-        CONFIG_TARGET_KERNEL_PARTSIZE=160
-        CONFIG_TARGET_ROOTFS_PARTSIZE=740
-        # CONFIG_VMDK_IMAGES is not set
-        CONFIG_boost-compile-visibility-hidden=y
-        CONFIG_boost-runtime-shared=y
-        CONFIG_boost-static-and-shared-libs=y
-        CONFIG_boost-variant-release=y
-        CONFIG_PACKAGE_adbyby=y
-        EOF
-        sed -i 's/^[ \t]*//g' ./.config
-        make defconfig
-
+    
+    - name: 连接SSH
+      uses: P3TERX/ssh2actions@v1.0.0
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}  
 
     - name: 下载DL库
       run: |
         cd lede
+        make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
-    
-        
     - name: 开始编译固件
       run: |
         cd lede
         echo -e "$(nproc) thread build."
         make -j$(nproc) V=s
-        
-  
-    - name: 整理发布文件
-      id: assemble_artifact
-      run: |
-         cp -f "lede/bin/targets/x86/64/openwrt-x86-64-generic-squashfs-combined.img" "./openwrt.img"
-         zip OpenWrt.zip ./openwrt.img
-         release_tag="openwrt-$(date +%Y-%m-%d)"
-         echo "##[set-output name=release_tag;]$release_tag" 
-         
-    - name: 配置发布信息
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHU_TOKEN }}
-      with:
-        tag_name: ${{ steps.assemble_artifact.outputs.release_tag }}
-        release_name: ${{ steps.assemble_artifact.outputs.release_tag }}
-        draft: false
-        prerelease: false
-        
-    - name: 发布固件到Release
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHU_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: OpenWrt.zip
-        asset_name: OpenWrt.zip
-        asset_content_type: application/zip
 
-       
+    - name: 上传固件
+      uses: actions/upload-artifact@v2
+      with:
+        name: OpenWrt
+        path: lede/bin/targets/x86/64    
+
+
+
+
+        
