--- a/.github/workflows/openwrt.yml
+++ b/.github/workflows/openwrt.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
     - name: 准备开始
@@ -28,10 +28,6 @@ jobs:
     - name: 下载固件源码和软件包
       run: |
         git clone https://github.com/coolsnowwolf/lede
-        cd lede
-        # 下载软件包
-        git clone https://github.com/zjt37/zheng package/zheng/theme
-        git clone https://github.com/fw876/helloworld package/zheng/ssrplus
 
     - name: 更新和安装软件包
       run: |
@@ -43,8 +39,12 @@ jobs:
     - name: 常用配置修改
       run: |
         cd lede
+        git clone https://github.com/gd0772/package package/gd772
+        git clone https://github.com/kenzok8/small package/gd772/passwall
+        rm -rf package/gd772/passwall/luci-app-passwall2 package/gd772/passwall/luci-app-ssr-plus package/gd772/passwall/luci-app-bypass
+        git clone -b main https://github.com/fw876/helloworld package/gd772/ssrplus
         # 修改默认IP
-        sed -i "s/192.168.1.1/192.168.1.30/g" package/base-files/files/bin/config_generate
+        sed -i "s/192.168.1.1/192.168.2.30/g" package/base-files/files/bin/config_generate
         #  修改默认主题
         sed -i "s/bootstrap/atmaterial/g" feeds/luci/collections/luci/Makefile
         #  删除主题
@@ -57,6 +57,10 @@ jobs:
         git clone https://github.com/Jason6111/luci-app-netdata ./feeds/luci/applications/luci-app-netdata/
         # 调整网络共享到系统菜单
         sed -i 's/\"services\"/\"status\"/g' feeds/luci/applications/luci-app-samba/luasrc/controller/samba.lua
+        sed -i 's/TTYD 终端/终端/g' feeds/luci/applications/luci-app-ttyd/po/zh-cn/terminal.po
+        sed -i 's/ShadowSocksR Plus+/SSR Plus+/g' package/gd772/ssrplus/luci-app-ssr-plus/luasrc/controller/shadowsocksr.lua
+        sed -i 's/Turbo ACC 网络加速/网络加速/g' feeds/luci/applications/luci-app-turboacc/po/zh-cn/turboacc.po
+        
 
     - name: 连接SSH
       uses: P3TERX/ssh2actions@v1.0.0
@@ -69,7 +73,6 @@ jobs:
     - name: 下载DL库
       run: |
         cd lede
-        make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
@@ -79,7 +82,6 @@ jobs:
     - name: 开始编译固件
       run: |
         cd lede
-        echo -e "$(nproc) thread build."
         make -j$(nproc) V=s
         
   
