--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -254,5 +254,5 @@ jobs:
       if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
         name: OpenWrt
-        path: openwrt/bin/targets/
+        path: lede/bin/targets/
         
