--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -251,8 +251,8 @@ jobs:
 
     - name: 上传固件
       uses: actions/upload-artifact@main
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE== 'true'
       with:
         name: OpenWrt
-        path: lede/bin/targets/
+        path: lede/bin/targets/*
         
