--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -93,3 +93,10 @@ jobs:
       run: |
         # 下载固件源码
         git clone https://github.com/coolsnowwolf/lede
+        
+    - name: 上传固件
+      uses: actions/upload-artifact@main
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_FIRMWARE== 'true'
+      with:
+        name: OpenWrt
+        path: lede/*
