--- a/.github/workflows/lede.yml
+++ b/.github/workflows/lede.yml
@@ -53,7 +53,7 @@ jobs:
         sudo -E systemctl daemon-reload
         sudo -E timedatectl set-timezone "Asia/Shanghai"
         
-    - name: 下载固件源码和软件包
+    - name: 下载固件源码
       working-directory: ./
       run: |
         # 下载固件源码
