--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -1,28 +1,24 @@
-name: Build OpenWrt
-
+name: 编译OpenWrt固件
 on:
-  repository_dispatch:
-  release:
-    types: published
- # push:
- #   branches:
- #     - master
- #   paths:
- #    - ''
-#  schedule:
-#    - cron: 0 8 * * 5
-# watch:
-#    types: started
-
-env:
-  SSH_ACTIONS: true
+  workflow_dispatch:
+    inputs:
+      ssh:
+        description: 'SSH远程'
+        required: true
+        default: 'ssh-actions'
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
-    if: github.event.repository.owner.id == github.event.sender.id
+    runs-on: ubuntu-22.04
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@master
+    - name: 准备开始
+      uses: actions/checkout@main
+
+    - name: SSH连接
+      uses: danshui-git/debugger-action@master
+      if: env.SSH_ACTIONS == 'true' || (github.event.inputs.ssh == 'ssh' && github.event.inputs.ssh  != 'false')
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
