--- a/.github/workflows/a.yml
+++ b/.github/workflows/a.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       ssh:
         description: 'SSH远程'
-        required: false
+        required: true
         default: 'ssh-actions'
     
 
