--- a/.github/workflows/pve.yml
+++ b/.github/workflows/pve.yml
@@ -51,3 +51,10 @@ jobs:
     - name: 下载源码
       run: 
         git clone git://git.proxmox.com/git/pve-kernel.git pve-kernel
+
+    - name: SSH远程连接服务器
+      uses: P3TERX/ssh2actions@v1.0.0
+      if: env.SSH_ACTIONS == 'true' || (github.event.inputs.ssh == 'ssh' && github.event.inputs.ssh  != 'false')
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
