--- a/.github/workflows/pve.yml
+++ b/.github/workflows/pve.yml
@@ -1,12 +1,38 @@
-name: PVE内核修改
-on:
-  repository_dispatch:
-  workflow_dispatch:
-    inputs:
-      ssh:
-        description: '编译OpenWrt固件-SSH远程：改为"ssh"打开SSH连接'
-        required: true
-        default: 'ssh-actions'
+name: 编译PVE内核
+
+on: 
+  release:
+    types: [published]
+
+  #push:
+  #  branches: 
+  #    - master
+
+  schedule:
+    - cron:  1 0 * * 6
+  
+  watch:
+    types: [started]
+    
+
+jobs:
+  build:
+    runs-on: ubuntu-22.04
+
+    steps:
+    - name: 准备开始
+      uses: actions/checkout@main
+      
+    - name: 清理磁盘空间
+      uses: easimon/maximize-build-space@master
+      with: 
+        root-reserve-mb: 2048
+        swap-size-mb: 1
+        remove-dotnet: 'true'
+        remove-android: 'true'
+        remove-haskell: 'true'
+        remove-codeql: 'true'
+        remove-docker-images: 'true'
 
 
 jobs:
@@ -15,7 +41,7 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
     
     steps:
-    - name: 准备结束
+    - name: 准备开始
       uses: actions/checkout@v2
 
     - name: 安装依赖
@@ -52,9 +78,20 @@ jobs:
       run: 
         git clone git://git.proxmox.com/git/pve-kernel.git pve-kernel
 
-    - name: SSH远程连接服务器
-      uses: P3TERX/ssh2actions@v1.0.0
-      if: env.SSH_ACTIONS == 'true' || (github.event.inputs.ssh == 'ssh' && github.event.inputs.ssh  != 'false')
-      env:
-        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
-        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+    - name: 修改ACS
+      run: |
+        cd pve-kernel
+        sed -i "s/106 @@/105 @@/g" patches/kernel/0004-pci-Enable-overrides-for-missing-ACS-capabilities-4..patch
+        sed -i "/pci_find_ext_capability(dev, PCI_EXT_CAP_ID_ACS))/d" patches/kernel/0004-pci-Enable-overrides-for-missing-ACS-capabilities-4..patch
+        sed -i "s/(dev) ||/(dev))/g" patches/kernel/0004-pci-Enable-overrides-for-missing-ACS-capabilities-4..patch
+
+    - name: 开始编译内核
+      run: |
+        cd pve-kernel
+        make V=s
+
+    - name: 上传内核
+      uses: actions/upload-artifact@main
+      with:
+        name: PVE
+        path: pve-kernel/*.deb
