--- a/.github/workflows/sync-folder.yml
+++ b/.github/workflows/sync-folder.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Copy folder from source to target
         run: |
           git clone https://github.com/TanZhiwen2001/luci-app-adguardhome.git
+          rm -rf ./zheng/luci-app-adguardhome/*
           cp -r ./luci-app-adguardhome/luci-app-adguardhome/* ./zheng/luci-app-adguardhome/
 
           
